--- a/profile/newp.html
+++ b/profile/newp.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile Template</title>
+  <title>Profile </title>
   <style>
-    /* CSS styles go here */
     body {
       font-family: Arial, sans-serif;
       background-image: url("nat.jpg");
@@ -61,7 +60,7 @@
       text-align: left;
     }
     
-    /* Rest of your CSS styles */
+
   </style>
 </head>
 <body>
